--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "bower": "^1.7.7",
     "browser-sync": "^2.13.0",
+    "gulp-ruby-sass": "^2.0.6",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
