--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
     "lodash": "^4.13.1",
-    "angular-material": "^1.0.9"
+    "angular-material": "^1.0.9",
+    "md-colors": "^1.0.0"
   }
 }
