--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "html5-boilerplate": "^5.3.0",
     "lodash": "^4.13.1",
     "angular-material": "^1.0.9",
-    "md-colors": "^1.0.0"
+    "md-colors": "^1.0.0",
+    "angular-sanitize": "^1.5.8"
   }
 }
